@@ -6,10 +6,9 @@ class DevicesMeasurementWithInterval extends DevicesMeasurement {
 
     /**
      * @param array $data
-     * @param null|string $name
      * @return $this
      */
-    public static function deserialize(array $data, $name = null): self {
+    public static function deserialize(array $data): self {
         $object = new static();
 
         foreach ($data as $deviceId => $abbreviationMeasurements) {
