@@ -1,0 +1,11 @@
+<?php
+
+namespace meteocontrol\client\vcomapi\model;
+
+class PanelModule extends BaseModel {
+
+    /** @var string */
+    public $vendor;
+    /** @var string */
+    public $model;
+}
